--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="QR Scan">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
     <main>
-     <img src="/image-qr-code.png" alt="" width="200" id="qrimg">
+     <img src="/images/image-qr-code.png" alt="Qr design" width="200">
      <div>
      <h2>Improve your front-end <br>skills by building projects</h2>
      <p>Scan the QR code to visit Frontend <br>Mentor and take your coding skills to the next level</p>
