--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
     <main>
-     <img src="/images/image-qr-code.png" alt="Qr design" width="200">
+     <img src="images/image-qr-code.png" alt="Qr design" id="qrimg" width="200">
      <div>
      <h2>Improve your front-end <br>skills by building projects</h2>
      <p>Scan the QR code to visit Frontend <br>Mentor and take your coding skills to the next level</p>
