--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="QR Scan">
+        <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
